/**
 * Copyright (c) 2015 - The CM Authors <legal@clickmatcher.com>
 *   All Rights Reserved.
 *
 * This file is CONFIDENTIAL -- Distribution or duplication of this material or
 * the information contained herein is strictly forbidden unless prior written
 * permission is obtained.
 */
package cm;

message TSDBTableScanParams {
  required string stream_key = 1;
  required string partition_key = 2;
  optional uint64 sample_modulo = 3;
  optional uint64 sample_index = 4;
  optional uint64 version = 5;
}

